--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,15 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_USERNAME=bronxpcgebenezer@gmail.com
+MAIL_PASSWORD="dnosnzsliudynngo"
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=bronxpcgebenezer@gmail.com
+MAIL_FROM_NAME="PCGEBENEZER BRONX"
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
