--- a/.env.example
+++ b/.env.example
@@ -31,7 +31,7 @@ MAIL_USERNAME=bronxpcgebenezer@gmail.com
 MAIL_PASSWORD="dnosnzsliudynngo"
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS=bronxpcgebenezer@gmail.com
-MAIL_FROM_NAME="PCGEBENEZER BRONX"
+MAIL_FROM_NAME="KRAVS PIE"
 
 
 AWS_ACCESS_KEY_ID=
