--- a/.env.example
+++ b/.env.example
@@ -27,10 +27,10 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.googlemail.com
 MAIL_PORT=465
-MAIL_USERNAME=bronxpcgebenezer@gmail.com
-MAIL_PASSWORD="dnosnzsliudynngo"
+MAIL_USERNAME=kravspie2020@gmail.com
+MAIL_PASSWORD="xgnamawufhvqhler"
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=bronxpcgebenezer@gmail.com
+MAIL_FROM_ADDRESS=kravspie2020@gmail.com
 MAIL_FROM_NAME="KRAVS PIE"
 
 
